# ALinkToMarkdown

./: .gitignore  Dockerfile  app_exceptions.py  config.py  main.py  pyproject.toml  readme.md  requirements.txt  start_parser.py
.github/workflows/: ci-pre-commit.yml
parser/: parser_class.py  parser_config.py
tests/: test_common_utils.py  test_parser_class.py
utils/: common_utils.py
