[project]
name = "alinktomarkdown"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.17",
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "markdownify>=1.1.0",
    "streamlit>=1.44.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.6",
]
